eks_sample/external_storage/wordpress/alb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab2-ingress
  annotations:
    alb.ingress.kubernetes.io/security-groups: sg-0b208d2554352740c
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lab2-wordpress-service
              port:
                number: 80
